# cpsWithSplines

./: .gitignore  CMakeLists.txt  README.md  lastCode.cpp
src/cps/: Arc.hpp  Boundary.cpp  Boundary.hpp  CentroidDistanceFunction.cpp  CentroidDistanceFunction.hpp  Compatibility.hpp  ConnectorFlat.hpp  ConnectorL2.hpp  ContourHierarchyNode.hpp  CpSignature.hpp  CpsMatrix.cpp  CpsMatrix.hpp  Curve.cpp  Curve.hpp  Descriptor.hpp  Distance.hpp  DistanceConnective.hpp  DistanceL1.hpp  DistanceL2.hpp  DistanceL2Log.hpp  DistanceL2Squared.hpp  DistanceLinf.hpp  DistanceMatrix.hpp  EqualLengthSampling.hpp  FloydWarshall.hpp  FreemanChain.cpp  FreemanChain.hpp  Imports.hpp  InnerDistanceL2.hpp  InnerDistanceL2Log.hpp  InnerDistanceL2Squared.hpp  LineSimplifier.hpp  Math.hpp  Message.cpp  Message.hpp  Metric.hpp  NormL1.hpp  NormL2.hpp  NormL2Log.hpp  NormL2Squared.hpp  (+14 more)
src/experiments/: algorithmThresholdExperiment.hpp  bigExperimentForTresholdAndErrorRate.hpp  bullsEyeExperiment.hpp  largeDeformationExperiment.hpp
src/main/: contourUtilities.hpp  cpsFunctions.hpp  drawUtilityClasses.hpp  filesManagementFunctions.hpp  generalFunctions.hpp  largeDeformationExperiment.hpp  main.cpp  main.hpp  noiseFunctions.hpp  test-main.cpp
